# bif

./: .cvsignore  AUTHORS  ChangeLog  CommsProtocol.txt  DESIGN  Makefile  README  TODO  about.php  common.inc  comms.h  configure  doupdate  fetch_projnews  history.php  index.php  links.php  navbar.inc  patches.php  progavr  robotwebsite.webprj  tech.php  version.h
IRSlave/: IR signals.txt
IRSlave/2313IRSlave/: IR Slave 1200 with beeper.asm  IR Slave 2400.asm  IR Slave.asm
IRSlave/2343IRSlave/: IR Slave.asm
IRSlave/4433IRSlave/: IR Slave.asm
base/: AUTHORS  ChangeLog  Makefile  README  TODO  base.kdevprj
master/: .cvsignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  README  README.DynamicC  TODO  master.kdevprj  master.lsm
master/master/: .cvsignore  Brain.h  IR.h  IRControl.h  LCD.h  Makefile  Makefile.am  alloc.c  alloc.h  brain.c  commonsubs.c  commonsubs.h  compat-posix.h  compat-rabbit.h  compat-win32.h  compat.h  computercontrol.c  computercontrol.h  control.c  control.h  english.c  filedefs  help.c  holdopen.c  initplay  io.c  io.h  ircontrol.c  lcd.c  lib.dir  master.c  master.h  masterfifo  masternosc  matigsalug.c  mytime.c  mytime.h  playsound  posix.h  posixmain.c  (+25 more)
master/master/templates/: cpp_template  header_template
mcs51/: AUTHORS  ChangeLog  Makefile  Makeopts  mcs51.kdevprj
spsynth/: INFO.email1  Makefile  README
spsynth/linuxtoavr/linuxtoavr/: .cvsignore  Makefile.am  bool.h  extras.c  extras.h  input.conf  lex.l  loaddump.c  main.c  main.h  makedump.c  makedump.h  parse.c  parse.h  pcadpcm.c  pcadpcm.h  playitem.c  program.c  results.c  results.h  yacc.y
spsynth/linuxtoavr/linuxtoavr/templates/: cpp_template
templates/: standard.php
website/: common.inc  counter.inc  doupdate  fetch_projlinks  fetch_projnews  history.php  tech.php
(+56 files in other folders)
