####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = master
master_SOURCES = slave-io.c holdopen.c io.c mytime.c tell.c alloc.c rabbitthreads.c computercontrol.c control.c speak.c matigsalug.c lcd.c ircontrol.c help.c english.c brain.c commonsubs.c slavecomms.c slave-ir.c slave-speech.c slave-base.c readslavecomms.c master.c posixthreads.c posixmain.c 
master_LDADD   = 


EXTRA_DIST = posixmain.c compat-rabbit.h compat.h slave-base.h threads.h posixthreads.c compat-posix.h master.h master.c posix.h readslavecomms.c slave-base.c slave-speech.h slave-ir.h slave-speech.c slave-ir.c slavecomms.c slavecomms.h commonsubs.c commonsubs.h Brain.h IR.h IRControl.h LCD.h brain.c english.c help.c ircontrol.c lcd.c matigsalug.c speak.c speak.h control.h control.c computercontrol.h computercontrol.c rabbitthreads.c alloc.c alloc.h tell.c mytime.h mytime.c io.c io.h soundcontrol.h compat-win32.h holdopen.c slave-io.h slave-io.c 

####### kdevelop will overwrite this part!!! (end)############
