####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = linuxtoavr
linuxtoavr_SOURCES = yacc.y lex.l parse.c playitem.c pcadpcm.c extras.c results.c program.c makedump.c loaddump.c main.c
linuxtoavr_LDADD   = 


EXTRA_DIST = main.c main.h loaddump.c makedump.c program.c bool.h pcadpcm.h results.h results.c extras.c extras.h pcadpcm.c playitem.c lex.l yacc.y parse.c parse.h makedump.h 

####### kdevelop will overwrite this part!!! (end)############
bin_PROGRAMS = linuxtoavr

# set the include path found by configure
INCLUDES= $(all_includes)

# the library search path.
linuxtoavr_LDFLAGS = $(all_libraries) 
                                                                                
